Fix mobile spacing problem

--- a/src/clincoded/static/scss/clincoded/modules/_navbar.scss
+++ b/src/clincoded/static/scss/clincoded/modules/_navbar.scss
@@ -91,6 +91,7 @@
 
     li {
         display: table-cell;
+        vertical-align: top;
         text-align: center;
         padding: 1px 0 0 1px;
 
